lintian (1.24.3) unstable; urgency=low

  * checks/copyright-file{,.desc}:
    + [ADB] Drop the "copyright line too long" check.  Most of the issues
      it flags aren't easily fixable, particularly where the copyright file
      is (semi)automatically generated.  (Closes: #491302, #491365, #491685)
  * checks/debconf:
    + [ADB] Don't complain about unused debconf templates in udebs.
      (Closes: #491135)
    + [RA] Try to recognize at least some debconf template uses in Perl.
  * checks/description:
    + [RA] Don't warn about a synopsis that ends in "etc."  Patch from
      Chris Lamb.  (Closes: #491252)
  * checks/fields{,.desc}:
    + [RA] Warn about packages that depend exclusively on makedev.
      Thanks, Josh Triplett.  (Closes: #491625)
  * checks/manpages:
    + [RA] Suppress warnings about inability to break a line that contains
      a URL.  URLs often can't be usefully broken.  Based on a patch by
      Damyan Ivanov.  (Closes: #491578)
  * checks/nmu:
    + [ADB] Use Lintian::Collect for maintainer / uploader information
  * checks/patch-systems:
    + [RA] Combine all patch-system-but-direct-changes-in-diff instances
      into a single message to reduce the noise from packages that rebuild
      all auto-generated files outside the patch system.  Thanks, Julien
      Cristau.  (Closes: #491296)
  * checks/po-debconf{,.desc}:
    + [ADB] Check that at least one complete translation exists.  Thanks Jordà
      Polo.
  * checks/scripts{,.desc}:
    + [RA] Warn about maintainer scripts that prepend a path to commands.
      Based on a patch by Raphael Geissert.  (Closes: #376184)
  * checks/shared-libs.desc:
    + [ADB] Improve the description of no-symbols-control-file.

  * data/doc-base/sections:
    + [ADB] Resynchronize with doc-base's section list (adding
      Programming/OCaml).  (Closes: #491440)

  * doc/desc-files:
    + [ADB] Update the description of tags to include experimental and info
      tags.
  * doc/README: