@@ -115,7 +115,7 @@ sub file_info {
             or fail("an error in the file pkg is preventing lintian from checking this package: $_");
         my ($file, $info) = ($1,$2);
 
-        $file =~ s,^./,,o;
+        $file =~ s,^\./,,o;
         $file =~ s,/+$,,o;
 
         $file_info{$file} = $info;
@@ -152,6 +152,10 @@ sub objdump_info {
             if (m/^[0-9a-fA-F]+.{6}\w\w?\s+(\S+)\s+[0-9a-zA-Z]+\s+(\S+)\s+(\S+)$/){
                 my ($foo, $sec, $sym) = ($1, $2, $3);
                 push @{$file->{SYMBOLS}}, [ $foo, $sec, $sym ];
+
+		if ($foo eq '.text' and $sec eq 'Base' and $sym eq 'caml_main') {
+		    $file->{OCAML} = 1;
+		}
             }
         } else {
             if (m/^\s*NEEDED\s*(\S+)/o) {
